[gd_scene load_steps=15 format=3 uid="uid://bb34wywih3341"]

[ext_resource type="Texture2D" uid="uid://dw7uba8h6ypt" path="res://Sprites/Items/Safe_close.png" id="1_2i0xq"]
[ext_resource type="Script" path="res://Scene/Items/safe_with_gun.gd" id="2_e7j12"]
[ext_resource type="Texture2D" uid="uid://bi7y2xtr4p5wq" path="res://Sprites/Items/Safe_open.png" id="2_q1a53"]
[ext_resource type="AudioStream" uid="uid://bddigye5glcc4" path="res://Sounds/Error.wav" id="4_uqpdh"]
[ext_resource type="AudioStream" uid="uid://cm1tnni14ukxg" path="res://Sounds/Safe_open.wav" id="5_otk21"]
[ext_resource type="AudioStream" uid="uid://bl883lt6nn22a" path="res://Sounds/Safe_close.wav" id="6_4d440"]
[ext_resource type="AudioStream" uid="uid://cxnbnh7k5rtnp" path="res://Sounds/gun_inventory.mp3" id="7_uvgxw"]
[ext_resource type="AudioStream" uid="uid://y4julrkdc2wx" path="res://Sounds/Cnoak.mp3" id="8_5hac2"]

[sub_resource type="SpriteFrames" id="SpriteFrames_x5835"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_2i0xq")
}],
"loop": true,
"name": &"close",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_q1a53")
}],
"loop": true,
"name": &"open",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_yulva"]
size = Vector2(207.47, 92.7332)

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_invp5"]
load_path = "res://.godot/imported/circle_light.png-ea7be3356199a949fe50979ab7f1d4f4.ctex"

[sub_resource type="Animation" id="Animation_p3rj2"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Control:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_w7ryc"]
resource_name = "rotation_panel"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Control:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 0,
"values": [0.0, 0.0378294, -0.0383972, 0.0383972, -0.0383972, 0.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_moxiu"]
_data = {
"RESET": SubResource("Animation_p3rj2"),
"rotation_panel": SubResource("Animation_w7ryc")
}

[node name="Safe_with_gun" type="AnimatedSprite2D" groups=["safe"]]
scale = Vector2(0.8, 0.8)
sprite_frames = SubResource("SpriteFrames_x5835")
animation = &"close"
script = ExtResource("2_e7j12")

[node name="Area2D_safe" type="Area2D" parent="."]
unique_name_in_owner = true
collision_layer = 8
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D_safe"]
position = Vector2(-55.6991, 173.711)
rotation = 0.50167
scale = Vector2(0.999999, 0.999999)
shape = SubResource("RectangleShape2D_yulva")
debug_color = Color(0.572549, 0.529412, 0.462745, 0.419608)

[node name="CircleLight" type="Sprite2D" parent="."]
unique_name_in_owner = true
visible = false
modulate = Color(0.937255, 0.603922, 0, 0.207843)
show_behind_parent = true
position = Vector2(7.5, -13.75)
scale = Vector2(0.14375, 0.123348)
texture = SubResource("CompressedTexture2D_invp5")

[node name="CanvasLayer_code_panel" type="CanvasLayer" parent="."]
unique_name_in_owner = true
layer = 2

[node name="Control" type="Control" parent="CanvasLayer_code_panel"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.2, 1.2)

[node name="CenterContainer" type="CenterContainer" parent="CanvasLayer_code_panel/Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer_code_panel/Control/CenterContainer"]
layout_mode = 2

[node name="Panel" type="Panel" parent="CanvasLayer_code_panel/Control/CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 48)
layout_mode = 2

[node name="Label_code" type="Label" parent="CanvasLayer_code_panel/Control/CenterContainer/VBoxContainer/Panel"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer_code_panel/Control/CenterContainer/VBoxContainer"]
layout_mode = 2

[node name="Panel_1" type="Panel" parent="CanvasLayer_code_panel/Control/CenterContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(48, 48)
layout_mode = 2

[node name="Button_1" type="Button" parent="CanvasLayer_code_panel/Control/CenterContainer/VBoxContainer/HBoxContainer/Panel_1"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
focus_mode = 0
text = "1"
icon_alignment = 1

[node name="Panel_2" type="Panel" parent="CanvasLayer_code_panel/Control/CenterContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(48, 48)
layout_mode = 2

[node name="Button_2" type="Button" parent="CanvasLayer_code_panel/Control/CenterContainer/VBoxContainer/HBoxContainer/Panel_2"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
focus_mode = 0
text = "2"
icon_alignment = 1

[node name="Panel_3" type="Panel" parent="CanvasLayer_code_panel/Control/CenterContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(48, 48)
layout_mode = 2

[node name="Button_3" type="Button" parent="CanvasLayer_code_panel/Control/CenterContainer/VBoxContainer/HBoxContainer/Panel_3"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
focus_mode = 0
text = "3"
icon_alignment = 1

[node name="HBoxContainer2" type="HBoxContainer" parent="CanvasLayer_code_panel/Control/CenterContainer/VBoxContainer"]
layout_mode = 2

[node name="Panel_4" type="Panel" parent="CanvasLayer_code_panel/Control/CenterContainer/VBoxContainer/HBoxContainer2"]
custom_minimum_size = Vector2(48, 48)
layout_mode = 2

[node name="Button_4" type="Button" parent="CanvasLayer_code_panel/Control/CenterContainer/VBoxContainer/HBoxContainer2/Panel_4"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
focus_mode = 0
text = "4"
icon_alignment = 1

[node name="Panel2_5" type="Panel" parent="CanvasLayer_code_panel/Control/CenterContainer/VBoxContainer/HBoxContainer2"]
custom_minimum_size = Vector2(48, 48)
layout_mode = 2

[node name="Button_5" type="Button" parent="CanvasLayer_code_panel/Control/CenterContainer/VBoxContainer/HBoxContainer2/Panel2_5"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
focus_mode = 0
text = "5
"
icon_alignment = 1

[node name="Panel3_6" type="Panel" parent="CanvasLayer_code_panel/Control/CenterContainer/VBoxContainer/HBoxContainer2"]
custom_minimum_size = Vector2(48, 48)
layout_mode = 2

[node name="Button_6" type="Button" parent="CanvasLayer_code_panel/Control/CenterContainer/VBoxContainer/HBoxContainer2/Panel3_6"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
focus_mode = 0
text = "6"
icon_alignment = 1

[node name="HBoxContainer3" type="HBoxContainer" parent="CanvasLayer_code_panel/Control/CenterContainer/VBoxContainer"]
layout_mode = 2

[node name="Panel_7" type="Panel" parent="CanvasLayer_code_panel/Control/CenterContainer/VBoxContainer/HBoxContainer3"]
custom_minimum_size = Vector2(48, 48)
layout_mode = 2

[node name="Button_7" type="Button" parent="CanvasLayer_code_panel/Control/CenterContainer/VBoxContainer/HBoxContainer3/Panel_7"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
focus_mode = 0
text = "7"
icon_alignment = 1

[node name="Panel2_8" type="Panel" parent="CanvasLayer_code_panel/Control/CenterContainer/VBoxContainer/HBoxContainer3"]
custom_minimum_size = Vector2(48, 48)
layout_mode = 2

[node name="Button_8" type="Button" parent="CanvasLayer_code_panel/Control/CenterContainer/VBoxContainer/HBoxContainer3/Panel2_8"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
focus_mode = 0
text = "8"
icon_alignment = 1

[node name="Panel3_9" type="Panel" parent="CanvasLayer_code_panel/Control/CenterContainer/VBoxContainer/HBoxContainer3"]
custom_minimum_size = Vector2(48, 48)
layout_mode = 2

[node name="Button_9" type="Button" parent="CanvasLayer_code_panel/Control/CenterContainer/VBoxContainer/HBoxContainer3/Panel3_9"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
focus_mode = 0
text = "9"
icon_alignment = 1

[node name="HBoxContainer4" type="HBoxContainer" parent="CanvasLayer_code_panel/Control/CenterContainer/VBoxContainer"]
layout_mode = 2

[node name="Panel" type="Panel" parent="CanvasLayer_code_panel/Control/CenterContainer/VBoxContainer/HBoxContainer4"]
custom_minimum_size = Vector2(48, 48)
layout_mode = 2

[node name="ColorRect" type="ColorRect" parent="CanvasLayer_code_panel/Control/CenterContainer/VBoxContainer/HBoxContainer4/Panel"]
layout_mode = 2
offset_left = 4.0
offset_top = 4.0
offset_right = 44.0
offset_bottom = 44.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.713726, 0, 0, 1)

[node name="Exit" type="Button" parent="CanvasLayer_code_panel/Control/CenterContainer/VBoxContainer/HBoxContainer4/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
focus_mode = 0

[node name="Panel_0" type="Panel" parent="CanvasLayer_code_panel/Control/CenterContainer/VBoxContainer/HBoxContainer4"]
custom_minimum_size = Vector2(48, 48)
layout_mode = 2

[node name="Button_0" type="Button" parent="CanvasLayer_code_panel/Control/CenterContainer/VBoxContainer/HBoxContainer4/Panel_0"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
focus_mode = 0
text = "0"
icon_alignment = 1

[node name="Panell" type="Panel" parent="CanvasLayer_code_panel/Control/CenterContainer/VBoxContainer/HBoxContainer4"]
custom_minimum_size = Vector2(48, 48)
layout_mode = 2

[node name="ColorRect" type="ColorRect" parent="CanvasLayer_code_panel/Control/CenterContainer/VBoxContainer/HBoxContainer4/Panell"]
layout_mode = 0
offset_left = 4.0
offset_top = 4.0
offset_right = 44.0
offset_bottom = 44.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0.564706, 0.0784314, 1)

[node name="input_code" type="Button" parent="CanvasLayer_code_panel/Control/CenterContainer/VBoxContainer/HBoxContainer4/Panell"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
focus_mode = 0

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer_code_panel/Control/CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 200)
layout_mode = 2

[node name="Animation_panel" type="AnimationPlayer" parent="CanvasLayer_code_panel"]
unique_name_in_owner = true
libraries = {
"": SubResource("AnimationLibrary_moxiu")
}

[node name="Audio_Error" type="AudioStreamPlayer2D" parent="."]
unique_name_in_owner = true
stream = ExtResource("4_uqpdh")
bus = &"Sounds"

[node name="Audio_open" type="AudioStreamPlayer2D" parent="."]
unique_name_in_owner = true
stream = ExtResource("5_otk21")
volume_db = 5.0
bus = &"Sounds"

[node name="Audio_close" type="AudioStreamPlayer2D" parent="."]
unique_name_in_owner = true
stream = ExtResource("6_4d440")
bus = &"Sounds"

[node name="Audio_gun" type="AudioStreamPlayer2D" parent="."]
unique_name_in_owner = true
stream = ExtResource("7_uvgxw")
volume_db = -5.0
bus = &"Sounds"

[node name="Audio_cnock" type="AudioStreamPlayer2D" parent="."]
unique_name_in_owner = true
stream = ExtResource("8_5hac2")
bus = &"Sounds"

[connection signal="body_entered" from="Area2D_safe" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D_safe" to="." method="_on_area_2d_body_exited"]
[connection signal="pressed" from="CanvasLayer_code_panel/Control/CenterContainer/VBoxContainer/HBoxContainer/Panel_1/Button_1" to="." method="_on_button_1_pressed"]
[connection signal="pressed" from="CanvasLayer_code_panel/Control/CenterContainer/VBoxContainer/HBoxContainer/Panel_2/Button_2" to="." method="_on_button_2_pressed"]
[connection signal="pressed" from="CanvasLayer_code_panel/Control/CenterContainer/VBoxContainer/HBoxContainer/Panel_3/Button_3" to="." method="_on_button_3_pressed"]
[connection signal="pressed" from="CanvasLayer_code_panel/Control/CenterContainer/VBoxContainer/HBoxContainer2/Panel_4/Button_4" to="." method="_on_button_4_pressed"]
[connection signal="pressed" from="CanvasLayer_code_panel/Control/CenterContainer/VBoxContainer/HBoxContainer2/Panel2_5/Button_5" to="." method="_on_button_5_pressed"]
[connection signal="pressed" from="CanvasLayer_code_panel/Control/CenterContainer/VBoxContainer/HBoxContainer2/Panel3_6/Button_6" to="." method="_on_button_6_pressed"]
[connection signal="pressed" from="CanvasLayer_code_panel/Control/CenterContainer/VBoxContainer/HBoxContainer3/Panel_7/Button_7" to="." method="_on_button_7_pressed"]
[connection signal="pressed" from="CanvasLayer_code_panel/Control/CenterContainer/VBoxContainer/HBoxContainer3/Panel2_8/Button_8" to="." method="_on_button_8_pressed"]
[connection signal="pressed" from="CanvasLayer_code_panel/Control/CenterContainer/VBoxContainer/HBoxContainer3/Panel3_9/Button_9" to="." method="_on_button_9_pressed"]
[connection signal="pressed" from="CanvasLayer_code_panel/Control/CenterContainer/VBoxContainer/HBoxContainer4/Panel/Exit" to="." method="_on_exit_pressed"]
[connection signal="pressed" from="CanvasLayer_code_panel/Control/CenterContainer/VBoxContainer/HBoxContainer4/Panel_0/Button_0" to="." method="_on_button_0_pressed"]
[connection signal="pressed" from="CanvasLayer_code_panel/Control/CenterContainer/VBoxContainer/HBoxContainer4/Panell/input_code" to="." method="_on_input_code_pressed"]
